// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a row 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "#ededed",
          "borderBottomWidth": 1,
          "paddingBottom": 10,
          "paddingRight": 10,
          "paddingTop": 10,
        },
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
        },
      ],
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "marginLeft": 10,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {},
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Array [
                Object {
                  "color": "#43484d",
                  "fontSize": 17.5,
                },
                Object {
                  "marginLeft": 10,
                },
                undefined,
                undefined,
              ],
            ]
          }
        >
          +1231231235
        </Text>
      </View>
      <View
        style={undefined}
      >
        <View />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flex": 0.15,
          "justifyContent": "center",
        }
      }
    >
      <View
        onPress={undefined}
        style={
          Array [
            false,
            false,
            false,
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        underlayColor="white"
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#bdc6cf",
                "fontSize": 28,
              },
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                undefined,
              ],
              Object {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders empty rows 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#eee",
      "flexDirection": "column",
      "height": 1334,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderBottomWidth": 1,
          "borderColor": "#cbd2d9",
          "borderTopWidth": 1,
          "marginTop": 20,
        },
        Object {
          "backgroundColor": "#eee",
          "borderBottomWidth": 0,
          "marginTop": 0,
        },
      ]
    }
  >
    <RCTScrollView
      data={Array []}
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      onViewableItemsChanged={undefined}
      renderItem={[Function]}
      renderScrollComponent={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      style={
        Object {
          "marginBottom": 30,
        }
      }
      updateCellsBatchingPeriod={50}
      windowSize={21}
    >
      <View />
    </RCTScrollView>
  </View>
</View>
`;

exports[`renders rows 1`] = `
Array [
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
        Array [
            Object {
              "backgroundColor": "transparent",
            },
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#ededed",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingRight": 10,
                "paddingTop": 10,
              },
              undefined,
            ],
          ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
>
    <View
        style={
            Array [
                Object {
                  "flexDirection": "row",
                  "marginLeft": 10,
                },
                undefined,
              ]
        }
    >
        <View
            style={
                Object {
                    "flex": 1,
                    "justifyContent": "center",
                  }
            }
        >
            <View
                style={undefined}
            >
                <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                        Array [
                            Object {},
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            Array [
                              Object {
                                "color": "#43484d",
                                "fontSize": 17.5,
                              },
                              Object {
                                "marginLeft": 10,
                              },
                              undefined,
                              undefined,
                            ],
                          ]
                    }
                >
                    +1231231235
                </Text>
            </View>
            <View
                style={undefined}
            >
                <View />
            </View>
        </View>
        <View
            style={
                Object {
                    "alignItems": "flex-end",
                    "flex": 0.15,
                    "justifyContent": "center",
                  }
            }
        >
            <View
                onPress={undefined}
                style={
                    Array [
                        false,
                        false,
                        false,
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "justifyContent": "center",
                        },
                        undefined,
                      ]
                }
                underlayColor="white"
            >
                <Text
                    accessible={true}
                    allowFontScaling={false}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                        Array [
                            Object {
                              "color": "#bdc6cf",
                              "fontSize": 28,
                            },
                            Array [
                              Object {
                                "backgroundColor": "transparent",
                              },
                              undefined,
                            ],
                            Object {
                              "fontFamily": "Material Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                          ]
                    }
                >
                    
                </Text>
            </View>
        </View>
    </View>
</View>,
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
        Array [
            Object {
              "backgroundColor": "transparent",
            },
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#ededed",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingRight": 10,
                "paddingTop": 10,
              },
              undefined,
            ],
          ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
>
    <View
        style={
            Array [
                Object {
                  "flexDirection": "row",
                  "marginLeft": 10,
                },
                undefined,
              ]
        }
    >
        <View
            style={
                Object {
                    "flex": 1,
                    "justifyContent": "center",
                  }
            }
        >
            <View
                style={undefined}
            >
                <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                        Array [
                            Object {},
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            Array [
                              Object {
                                "color": "#43484d",
                                "fontSize": 17.5,
                              },
                              Object {
                                "marginLeft": 10,
                              },
                              undefined,
                              undefined,
                            ],
                          ]
                    }
                >
                    +1231231234
                </Text>
            </View>
            <View
                style={undefined}
            >
                <View />
            </View>
        </View>
        <View
            style={
                Object {
                    "alignItems": "flex-end",
                    "flex": 0.15,
                    "justifyContent": "center",
                  }
            }
        >
            <View
                onPress={undefined}
                style={
                    Array [
                        false,
                        false,
                        false,
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "justifyContent": "center",
                        },
                        undefined,
                      ]
                }
                underlayColor="white"
            >
                <Text
                    accessible={true}
                    allowFontScaling={false}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                        Array [
                            Object {
                              "color": "#bdc6cf",
                              "fontSize": 28,
                            },
                            Array [
                              Object {
                                "backgroundColor": "transparent",
                              },
                              undefined,
                            ],
                            Object {
                              "fontFamily": "Material Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                          ]
                    }
                >
                    
                </Text>
            </View>
        </View>
    </View>
</View>,
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
        Array [
            Object {
              "backgroundColor": "transparent",
            },
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#ededed",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingRight": 10,
                "paddingTop": 10,
              },
              undefined,
            ],
          ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
>
    <View
        style={
            Array [
                Object {
                  "flexDirection": "row",
                  "marginLeft": 10,
                },
                undefined,
              ]
        }
    >
        <View
            style={
                Object {
                    "flex": 1,
                    "justifyContent": "center",
                  }
            }
        >
            <View
                style={undefined}
            >
                <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                        Array [
                            Object {},
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            Array [
                              Object {
                                "color": "#43484d",
                                "fontSize": 17.5,
                              },
                              Object {
                                "marginLeft": 10,
                              },
                              undefined,
                              undefined,
                            ],
                          ]
                    }
                >
                    +1231231236
                </Text>
            </View>
            <View
                style={undefined}
            >
                <View />
            </View>
        </View>
        <View
            style={
                Object {
                    "alignItems": "flex-end",
                    "flex": 0.15,
                    "justifyContent": "center",
                  }
            }
        >
            <View
                onPress={undefined}
                style={
                    Array [
                        false,
                        false,
                        false,
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "justifyContent": "center",
                        },
                        undefined,
                      ]
                }
                underlayColor="white"
            >
                <Text
                    accessible={true}
                    allowFontScaling={false}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                        Array [
                            Object {
                              "color": "#bdc6cf",
                              "fontSize": 28,
                            },
                            Array [
                              Object {
                                "backgroundColor": "transparent",
                              },
                              undefined,
                            ],
                            Object {
                              "fontFamily": "Material Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                          ]
                    }
                >
                    
                </Text>
            </View>
        </View>
    </View>
</View>,
]
`;

exports[`renders rows with selected number 1`] = `
Array [
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
        Array [
            Object {
              "backgroundColor": "transparent",
            },
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#ededed",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingRight": 10,
                "paddingTop": 10,
              },
              undefined,
            ],
          ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
>
    <View
        style={
            Array [
                Object {
                  "flexDirection": "row",
                  "marginLeft": 10,
                },
                undefined,
              ]
        }
    >
        <View
            style={
                Object {
                    "flex": 1,
                    "justifyContent": "center",
                  }
            }
        >
            <View
                style={undefined}
            >
                <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                        Array [
                            Object {},
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            Array [
                              Object {
                                "color": "#43484d",
                                "fontSize": 17.5,
                              },
                              Object {
                                "marginLeft": 10,
                              },
                              undefined,
                              undefined,
                            ],
                          ]
                    }
                >
                    +1231231235
                </Text>
            </View>
            <View
                style={undefined}
            >
                <View />
            </View>
        </View>
        <View
            style={
                Object {
                    "alignItems": "flex-end",
                    "flex": 0.15,
                    "justifyContent": "center",
                  }
            }
        >
            <View
                onPress={undefined}
                style={
                    Array [
                        false,
                        false,
                        false,
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "justifyContent": "center",
                        },
                        undefined,
                      ]
                }
                underlayColor="white"
            >
                <Text
                    accessible={true}
                    allowFontScaling={false}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                        Array [
                            Object {
                              "color": "#bdc6cf",
                              "fontSize": 28,
                            },
                            Array [
                              Object {
                                "backgroundColor": "transparent",
                              },
                              undefined,
                            ],
                            Object {
                              "fontFamily": "Material Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                          ]
                    }
                >
                    
                </Text>
            </View>
        </View>
    </View>
</View>,
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
        Array [
            Object {
              "backgroundColor": "transparent",
            },
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#ededed",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingRight": 10,
                "paddingTop": 10,
              },
              undefined,
            ],
          ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
>
    <View
        style={
            Array [
                Object {
                  "flexDirection": "row",
                  "marginLeft": 10,
                },
                undefined,
              ]
        }
    >
        <View
            style={
                Object {
                    "flex": 1,
                    "justifyContent": "center",
                  }
            }
        >
            <View
                style={undefined}
            >
                <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                        Array [
                            Object {},
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            Array [
                              Object {
                                "color": "#43484d",
                                "fontSize": 17.5,
                              },
                              Object {
                                "marginLeft": 10,
                              },
                              undefined,
                              undefined,
                            ],
                          ]
                    }
                >
                    +1231231236
                </Text>
            </View>
            <View
                style={undefined}
            >
                <View />
            </View>
        </View>
        <View
            style={
                Object {
                    "alignItems": "flex-end",
                    "flex": 0.15,
                    "justifyContent": "center",
                  }
            }
        >
            <View
                onPress={undefined}
                style={
                    Array [
                        false,
                        false,
                        false,
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "justifyContent": "center",
                        },
                        undefined,
                      ]
                }
                underlayColor="white"
            >
                <Text
                    accessible={true}
                    allowFontScaling={false}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                        Array [
                            Object {
                              "color": "#bdc6cf",
                              "fontSize": 28,
                            },
                            Array [
                              Object {
                                "backgroundColor": "transparent",
                              },
                              undefined,
                            ],
                            Object {
                              "fontFamily": "Material Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                          ]
                    }
                >
                    
                </Text>
            </View>
        </View>
    </View>
</View>,
]
`;
